<resources>
    <string name="app_name">Calculator</string>
    <string name="img_des_logo">Logo_calculator</string>
    <string name="hint_edit_1">Enter No 1</string>
    <string name="hint_edit_2">Enter No 2</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    <string name="tv_ans">Ans</string>

</resources>